log
Wed 27 Mar 2024 02:00:38 PM UTC: 
 list.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
60024d0
Wed 27 Mar 2024 02:01:23 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
be090ed
Wed 27 Mar 2024 02:05:13 PM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|0
be9f27b
Wed 27 Mar 2024 02:13:13 PM UTC: 
 list.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
list.c: In function ‘nextList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
list.c: In function ‘lastList’:
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
list.c: In function ‘prevList’:
list.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
228628d
Wed 27 Mar 2024 02:14:02 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
94a1c52
Wed 27 Mar 2024 02:15:24 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
083ba1b
